ChunkView#references refactoring